--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,32 +13,43 @@
         <item>Other</item>
     </string-array>
 
-    <string-array name="Schools">
+    <string-array name="schools">
         <item>Malibu High School</item>
         <item>Tuscany Glen Primary</item>
         <item>Forest Heights High</item>
     </string-array>
 
-    <!-- Eye Questions -->
-    <string name="q1.1">1.1. Do you experience blurry vision or have difficulty focusing on objects?</string>
-    <string name="q1.2">1.2. Do you frequently experience eye strain or fatigue, especially after extended periods of reading or screen time?</string>
-    <string name="q1.3">1.3. Do you wear any prescription spectacles or contacts?</string>
-    <string name="q1.4">1.4. Are your eyes frequently itchy, irritated or red?</string>
-    <string name="q1.5">1.5. Have you noticed any sudden flashes of light or floating spots (floaters) in your field of vision?</string>
+    <string-array name="eyeScreeningQuestions">
+        <item name="q1.1">1.1. Do you experience blurry vision or have difficulty focusing on objects?</item>
+        <item name="q1.2">1.2. Do you frequently experience eye strain or fatigue, especially after extended periods of reading or screen time?</item>
+        <item name="q1.3">1.3. Do you wear any prescription spectacles or contacts?</item>
+        <item name="q1.4">1.4. Are your eyes frequently itchy, irritated or red?</item>
+        <item name="q1.5">1.5. Have you noticed any sudden flashes of light or floating spots (floaters) in your field of vision?</item>
+    </string-array>
 
-    <!-- Ear Questions -->
-    <string name="q2.1">2.1. Do you experience frequent or recurring earaches or ear pain?</string>
-    <string name="q2.2">2.2. Do you often experience ringing in your ears (tinnitus)?</string>
-    <string name="q2.3">2.3. Have you undergone any ear surgeries or procedures in the past?</string>
-    <string name="q2.4">2.4. Are you exposed to loud noises on a regular basis, either at work or during recreational activities?</string>
-    <string name="q2.5">2.5. Have you noticed any discharge, odor, or itching in your ears?</string>
+    <string-array name="earScreeningQuestions">
+        <item name="q2.1">2.1. Do you experience frequent or recurring earaches or ear pain?</item>
+        <item name="q2.2">2.2. Do you often experience ringing in your ears (tinnitus)?</item>
+        <item name="q2.3">2.3. Have you undergone any ear surgeries or procedures in the past?</item>
+        <item name="q2.4">2.4. Are you exposed to loud noises on a regular basis, either at work or during recreational activities?</item>
+        <item name="q2.5">2.5. Have you noticed any discharge, odor, or itching in your ears?</item>
+    </string-array>
 
-    <!-- Throat Questions -->
-    <string name="q3.1">3.1. Have you experienced a persistent sore throat for more than two weeks?</string>
-    <string name="q3.2">3.2. Do you frequently have difficulty swallowing or feel a sensation of something stuck in your throat?</string>
-    <string name="q3.3">3.3. Have you noticed any unexplained changes in your voice, such as hoarseness or voice fatigue?</string>
-    <string name="q3.4">3.4. Have you noticed any unusual lumps, bumps, or swelling in your neck or throat area?</string>
-    <string name="q3.5">3.5. Do you experience recurrent or frequent throat infections?</string>
+    <string-array name="throatScreeningQuestions">
+        <item name="q3.1">3.1. Have you experienced a persistent sore throat for more than two weeks?</item>
+        <item name="q3.2">3.2. Do you frequently have difficulty swallowing or feel a sensation of something stuck in your throat?</item>
+        <item name="q3.3">3.3. Have you noticed any unexplained changes in your voice, such as hoarseness or voice fatigue?</item>
+        <item name="q3.4">3.4. Have you noticed any unusual lumps, bumps, or swelling in your neck or throat area?</item>
+        <item name="q3.5">3.5. Do you experience recurrent or frequent throat infections?</item>
+    </string-array>
+
+    <string-array name="doctors">
+        <item>Cibrian Hofsta (Optometrist)</item>
+        <item>Aphiwe Meslane (Dentist)</item>
+        <item>Aaron Fourie (General Practitioner)</item>
+        <item>Gareth Meslane (Dentist)</item>
+        <item>Luthando Magobongo (General Practitioner)</item>
+    </string-array>
 
 
     <string name="find_learner">Find Learner</string>
