BIG STYLE CHANGES GRATATATA

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,6 +17,11 @@
         <item>Malibu High School</item>
         <item>Tuscany Glen Primary</item>
         <item>Forest Heights High</item>
+        <item>Bergvliet High School</item>
+        <item>Eerste River Primary</item>
+        <item>Melton Rose Primary</item>
+        <item>Western Cape Sports School</item>
+        <item>DeKuilen High School</item>
     </string-array>
 
     <string-array name="eyeScreeningQuestions">
